2010-02-18 S. Thiell <stephane.thiell@cea.fr>

	* scripts/clush.py: Disable MsgTree buffering when not performing
	any gathering of results (when -b is not used).

	* Task.py: Allow disabling of MsgTree buffering (trac ticket #3) via
	'stdout_msgtree" and 'stderr_msgtree' Task default keywords, useful if we
	don't want MsgTree internal buffering for fully event-based scripts (eg.
	clush without -b). When disabled, any Task method accessing MsgTree data
	like iter_buffers() will raise a new exception (TaskMsgTreeError).

2010-02-17 S. Thiell <stephane.thiell@cea.fr>

	* Version 1.2 beta 5 released.

2010-02-16 S. Thiell <stephane.thiell@cea.fr>

	* NodeSet.py: Fix mixed-type comparisons, where, like standard set(),
	are allowed, instead of raising TypeError.

2010-02-15 S. Thiell <stephane.thiell@cea.fr>

	* Version 1.2 beta 4 released.
	
	* MsgTree.py: Added MsgTreeElem.splitlines() method as alias of lines().

2010-02-14 S. Thiell <stephane.thiell@cea.fr>
	
	* Updated doc/man pages for latest clush changes and added clubak tool.

	* Worker/Ssh.py: Fix Ssh worker issue where sometimes stderr buffer could
	not be read completely (trac ticket #50).

2010-02-13 S. Thiell <stephane.thiell@cea.fr>
	
	* scripts/clush.py: Comply with clubak by adding -L option that allow
	switching to alternative line mode display (when using -b). Also, sort
	buffers by nodes or nodeset length like clubak (fix trac ticket #54).

2010-02-11 S. Thiell <stephane.thiell@cea.fr>
	
	* Version 1.2 beta 3 released.

	* scripts/clush.py: For clush --copy, when --dest is not specified, set
	the destination path to the source dirname path and not the source full
	path.

	* scripts/clush.py: Added option --nostdin to prevent reading from
	standard input (fix trac ticket #49).

	* Engine/Factory.py: Disable Engine.EPoll automatic selection as an issue
	has been found with clush when stdin is a plain file (<file redirections).
	Engine.Poll is now the default engine for all platforms. Created trac